fixed some alignment issues on main content

--- a/client/src/pages/style.css
+++ b/client/src/pages/style.css
@@ -31,6 +31,12 @@ body {
 
 .skills-container {
   min-width: fit-content;
+  order: 1;
+  margin-top: 15px;
+}
+
+#skills-container {
+  margin-bottom: 0px;
 }
 
 .skills-icon {
@@ -54,10 +60,6 @@ body {
   
   margin-top: 15px;
   min-height: fit-content;
-}
-
-.skills-container {
-  order: 1;
 }
 
 .greeting {
